--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pylint = "^2.14.5"
 prospector = "^1.7.7"
 pip-audit = "^2.4.3"
 pylint-django = "^2.5.3"
+pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 
