--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pip-audit = "^2.4.3"
 pylint-django = "^2.5.3"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
+pytest-sugar = "^0.9.5"
 
 [tool.poetry.dev-dependencies]
 
