--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pylint-django = "^2.5.3"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 pytest-sugar = "^0.9.5"
+django-heroku = "^0.3.1"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
