--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest-cov = "^3.0.0"
 pytest-sugar = "^0.9.5"
 django-heroku = "^0.3.1"
 gunicorn = "^20.1.0"
+django-rest-swagger = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 
